# MultiContainer

./: .clang-format  .cmake-format.json  .pre-commit-config.yaml  .python_requirements.txt  CMakeLists.txt  README.md
doc/: descripition.md  pipeline.md
include/: CMakeLists.txt  Container.h  MultiContainer.h
src/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
